# bazel-grpc-gateway-data-example

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE
gateway/: BUILD.bazel  main.go
proto/: BUILD.bazel  service.proto
service/: BUILD.bazel  main.go
