load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/globegitter/bazel-grpc-gateway-data-example/service",
    deps = [
        "//proto:service_grpc_gateway_go_proto",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "service",
    embed = [":go_default_library"],
    importpath = "github.com/",
)
